--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="nav_aboutText">About app</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="logo">Logo</string>
+    <string name="home_welcome_string">Hi There! Welcome in GymBuddy - your personal trainings buddy</string>
+    <string name="start_new_training_button_text">Start new Training</string>
 </resources>
